test/types/records/split-init/split-init-const-error.good
split-init-const-error.chpl:4: In function 'main':
split-init-const-error.chpl:6: error: const actual is passed to 'ref' formal 'a' of =
note: to formal of type int(64)
